k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flight-price-api
  labels:
    app: flight-price-api
spec:
  selector:
    app: flight-price-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
