k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flight-price-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: flight-price.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flight-price-api
                port:
                  number: 80
